# wgpu_wasm_poc

./: .gitignore  Cargo.toml  README.md
resources/: mapa.json
src/: camera.rs  lib.rs  main.rs  map.rs  render.rs  transform.rs  vertex.rs
src/shaders/: main.wgsl  tile.wgsl
wasm-utils/: utils.js
