[package]
name = "idk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "idk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
async-executor = "1.5.1"
bytemuck ={ version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.10.0"
hecs = "0.10.3"
image = { version = "0.24.7", features = ["png", "jpeg"] }
log = "0.4.20"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
parry2d = "0.13.5"
pollster = "0.3.0"
rand = "0.8.5"
serde_json = "1.0.105"
wgpu = "0.17.0"
winit = "0.28.6"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }
js-sys = "0.3.64"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-timer = "0.2.5"
web-sys = { version = "0.3.64", features = [
    "Blob",
    "Document",
    "Window",
    "Element",
]}
wgpu = { version = "0.17", features = ["webgl"]}
